- Update UI - fix bug